jenkins_eks/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookings-service
  namespace: default
  labels:
    app: bookings-microservice
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: bookings-microservice
  ports:
    - protocol: TCP
      port: 5010
      name: http

---

apiVersion: v1
kind: Service
metadata:
  name: flights-service
  namespace: default
  labels:
    app: flights-microservice
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: flights-microservice
  ports:
    - protocol: TCP
      port: 5020
      name: http

---

apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: default
  labels:
    app: users-microservice
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: users-microservice
  ports:
    - protocol: TCP
      port: 5030
      name: http

---

apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: default
  labels:
    app: users-microservice
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: users-microservice
  ports:
    - protocol: TCP
      port: 5040
      name: http

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: admin-frontend
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: admin-frontend
  ports:
    - protocol: TCP
      port: 5000
      name: http
